--- a/.devops/backup-apim-deploy-pipelines.yml
+++ b/.devops/backup-apim-deploy-pipelines.yml
@@ -1,8 +1,8 @@
-pool:
-  vmImage: 'ubuntu-latest'
-
 variables:
   azureServiceConnectionApplyNameProd: '$(TF_AZURE_SERVICE_CONNECTION_APPLY_NAME_PROD)'
+
+pool:
+  vmImage: 'ubuntu-latest'
 
 steps:
   - task: AzureCLI@2
@@ -14,15 +14,22 @@ steps:
       failOnStandardError: false
       inlineScript: |
         set -e
+
+        echo "🔑 Load key from KV"
+
         key=$(az storage account keys list \
-        -g $(STORAGE_ACCOUNT_RG) \
-        -n $(STORAGE_ACCOUNT_NAME) \
+        --resource-group $(STORAGE_ACCOUNT_RG) \
+        --account-name $(STORAGE_ACCOUNT_NAME) \
         --query [0].value -o tsv)
+
+        echo "🚀 Start backup"
 
         az apim backup \
         --name $(APIM_NAME) \
-        -g $(APIM_RG) \
+        --resource-group $(APIM_RG) \
         --backup-name $(BACKUP_NAME) \
         --storage-account-name $(STORAGE_ACCOUNT_NAME) \
         --storage-account-container $(STORAGE_ACCOUNT_CONTAINER) \
         --storage-account-key $key
+
+        echo "✅ Backup apim complete"
