--- a/.devops/backup-apim-deploy-pipelines.yml
+++ b/.devops/backup-apim-deploy-pipelines.yml
@@ -30,7 +30,6 @@ steps:
         --backup-name $(BACKUP_NAME) \
         --storage-account-name $(STORAGE_ACCOUNT_NAME) \
         --storage-account-container $(STORAGE_ACCOUNT_CONTAINER) \
-        --storage-account-key $key \
-        --verbose
+        --storage-account-key $key 
 
         echo "✅ Backup apim complete"
