--- a/.devops/ecommerce-deploy-pipelines.yml
+++ b/.devops/ecommerce-deploy-pipelines.yml
@@ -69,6 +69,12 @@ resources:
       name: pagopa/azure-pipeline-templates
       ref: refs/tags/v6.0.0
       endpoint: "io-azure-devops-github-ro"
+    #Checkout tests repo that contains e2e tests to be executed after domain apply
+    - repository: pagopaCheckoutTests
+      type: github
+      name: pagopa/pagopa-checkout-tests
+      ref: main
+      endpoint: 'io-azure-devops-github-ro'
 
 stages:
 #DEV
