--- a/.devops/ecommerce-deploy-pipelines.yml
+++ b/.devops/ecommerce-deploy-pipelines.yml
@@ -69,14 +69,30 @@ resources:
       name: pagopa/azure-pipeline-templates
       ref: refs/tags/v6.0.0
       endpoint: "io-azure-devops-github-ro"
+    #Checkout tests repo that contains e2e tests to be executed after domain apply
+    - repository: pagopaCheckoutTests
+      type: github
+      name: pagopa/pagopa-checkout-tests
+      ref: main
+      endpoint: 'io-azure-devops-github-ro'
 
 stages:
 #DEV
   - ${{ if eq(parameters['DEV'], true) }}:
+   #COMMON
+    - template: templates/terraform-plan-apply/template.yaml@terraform
+      parameters:
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
+        TF_ENVIRONMENT_FOLDER: "weu-dev"
+        ENVIRONMENT: "DEV"
+        AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameDev}}"
+        WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
+        AZURE_SERVICE_CONNECTION_PLAN_NAME: "${{variables.azureServiceConnectionPlanNameDev}}"
+        AZURE_SERVICE_CONNECTION_APPLY_NAME: "${{variables.azureServiceConnectionApplyNameDev}}"
     #APP
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_app"
         TF_ENVIRONMENT_FOLDER: "weu-dev"
         ENVIRONMENT: "DEV"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameDev}}"
@@ -87,16 +103,6 @@ stages:
         AKS_API_SERVER_URL: ${{ variables.DEV_AKS_APISERVER_URL }}
         AKS_AZURE_DEVOPS_SA_CA_CRT: ${{ variables.DEV_AKS_AZURE_DEVOPS_SA_CACRT }}
         AKS_AZURE_DEVOPS_SA_TOKEN: ${{ variables.DEV_AKS_AZURE_DEVOPS_SA_TOKEN }}
-    #COMMON
-    - template: templates/terraform-plan-apply/template.yaml@terraform
-      parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
-        TF_ENVIRONMENT_FOLDER: "weu-dev"
-        ENVIRONMENT: "DEV"
-        AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameDev}}"
-        WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
-        AZURE_SERVICE_CONNECTION_PLAN_NAME: "${{variables.azureServiceConnectionPlanNameDev}}"
-        AZURE_SERVICE_CONNECTION_APPLY_NAME: "${{variables.azureServiceConnectionApplyNameDev}}"
     # E2E test
     - stage: "E2E_Tests_Checkout_DEV_environment"
       displayName: '🧪 Running E2E test on DEV env'
@@ -114,10 +120,20 @@ stages:
 
 #UAT
   - ${{ if eq(parameters['UAT'], true) }}:
+    #COMMON
+    - template: templates/terraform-plan-apply/template.yaml@terraform
+      parameters:
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
+        TF_ENVIRONMENT_FOLDER: "weu-uat"
+        ENVIRONMENT: "UAT"
+        AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameUat}}"
+        WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
+        AZURE_SERVICE_CONNECTION_PLAN_NAME: "${{variables.azureServiceConnectionPlanNameUat}}"
+        AZURE_SERVICE_CONNECTION_APPLY_NAME: "${{variables.azureServiceConnectionApplyNameUat}}"
     #APP
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_app"
         TF_ENVIRONMENT_FOLDER: "weu-uat"
         ENVIRONMENT: "UAT"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameUat}}"
@@ -128,16 +144,7 @@ stages:
         AKS_API_SERVER_URL: ${{ variables.UAT_AKS_APISERVER_URL }}
         AKS_AZURE_DEVOPS_SA_CA_CRT: ${{ variables.UAT_AKS_AZURE_DEVOPS_SA_CACRT }}
         AKS_AZURE_DEVOPS_SA_TOKEN: ${{ variables.UAT_AKS_AZURE_DEVOPS_SA_TOKEN }}
-    #COMMON
-    - template: templates/terraform-plan-apply/template.yaml@terraform
-      parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
-        TF_ENVIRONMENT_FOLDER: "weu-uat"
-        ENVIRONMENT: "UAT"
-        AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameUat}}"
-        WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
-        AZURE_SERVICE_CONNECTION_PLAN_NAME: "${{variables.azureServiceConnectionPlanNameUat}}"
-        AZURE_SERVICE_CONNECTION_APPLY_NAME: "${{variables.azureServiceConnectionApplyNameUat}}"
+
       # E2E test
     - stage: "E2E_Tests_Checkout_UAT_environment"
       displayName: '🧪 Running E2E test on UAT env'
@@ -155,10 +162,20 @@ stages:
 
 #PROD
   - ${{ if eq(parameters['PROD'], true) }}:
+    #COMMON
+    - template: templates/terraform-plan-apply/template.yaml@terraform
+      parameters:
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
+        TF_ENVIRONMENT_FOLDER: "weu-prod"
+        ENVIRONMENT: "PROD"
+        AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameProd}}"
+        WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
+        AZURE_SERVICE_CONNECTION_PLAN_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
+        AZURE_SERVICE_CONNECTION_APPLY_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
     #APP
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_app"
         TF_ENVIRONMENT_FOLDER: "weu-prod"
         ENVIRONMENT: "PROD"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameProd}}"
@@ -169,16 +186,7 @@ stages:
         AKS_API_SERVER_URL: ${{ variables.PROD_AKS_APISERVER_URL }}
         AKS_AZURE_DEVOPS_SA_CA_CRT: ${{ variables.PROD_AKS_AZURE_DEVOPS_SA_CACRT }}
         AKS_AZURE_DEVOPS_SA_TOKEN: ${{ variables.PROD_AKS_AZURE_DEVOPS_SA_TOKEN }}
-    #COMMON
-    - template: templates/terraform-plan-apply/template.yaml@terraform
-      parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
-        TF_ENVIRONMENT_FOLDER: "weu-prod"
-        ENVIRONMENT: "PROD"
-        AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameProd}}"
-        WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
-        AZURE_SERVICE_CONNECTION_PLAN_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
-        AZURE_SERVICE_CONNECTION_APPLY_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+
     - stage:
       displayName: '💻 Dashboards generation GHA'
       jobs:
