--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ __*.sh
 **/libs
 __import_apim
 /pagopa-infra.iml
+/src/psql/nodo/liquibase/online.properties
+/src/psql/nodo/liquibase/re.properties
