NOD-777: [Dismissione WISP] ELK Monitoring

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ __import_apim
 /pagopa-infra.iml
 /src/psql/nodo/liquibase/online.properties
 /src/psql/nodo/liquibase/re.properties
+/src/psql/nodo/liquibase/offline.properties
