--- a/.devops/disaster-recovery.yml
+++ b/.devops/disaster-recovery.yml
@@ -52,61 +52,12 @@ resources:
 
 
 stages:
-  - stage: UAT
+  - stage: DEV
     dependsOn: []
-    condition: and(succeeded(), eq(${{parameters.UAT}}, true))
+    condition: and(succeeded(), eq(${{parameters.DEV}}, true))
     pool:
       name: "${{variables.poolNameUat}}"
     jobs:
-      - job: fdr_failover
-        strategy:
-          parallel: 1
-        timeoutInMinutes: $[variables.TIME_OUT]
-        steps:
-          - template: templates/postgres-flexible-failover/template.yaml@terraform
-            parameters:
-              TF_DNS_ZONE_NAME: "u.internal.postgresql.pagopa.it"
-              TF_DNS_ZONE_RG_NAME: "pagopa-u-vnet-rg"
-              TF_DNS_ZONE_RECORD_NAME: "fdr-db"
-              TF_FAILED_DB_NAME: "pagopa-u-weu-fdr-flexible-postgresql"
-              TF_FAILOVER_DB_NAME: "pagopa-u-neu-fdr-pgflex"
-              WORKINGDIR: ${{ variables.WORKING_DIR }}
-              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameUat}}"
-
-  - stage: PROD
-    dependsOn: []
-    condition: and(succeeded(), eq(${{parameters.PROD}}, true))
-    pool:
-      name: "${{variables.poolNameProd}}"
-    jobs:
-      - job: fdr_failover
-        strategy:
-          parallel: 1
-        timeoutInMinutes: $[variables.TIME_OUT]
-        steps:
-          - template: templates/postgres-flexible-failover/template.yaml@terraform
-            parameters:
-              TF_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-              TF_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
-              TF_DNS_ZONE_RECORD_NAME: "fdr-db"
-              TF_FAILED_DB_NAME: "pagopa-p-weu-fdr-flexible-postgresql"
-              TF_FAILOVER_DB_NAME: "pagopa-p-neu-fdr-pgflex"
-              WORKINGDIR: ${{ variables.WORKING_DIR }}
-              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
-      - job: gpd_failover
-        strategy:
-          parallel: 1
-        timeoutInMinutes: $[variables.TIME_OUT]
-        steps:
-          - template: templates/postgres-flexible-failover/template.yaml@terraform
-            parameters:
-              TF_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-              TF_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
-              TF_DNS_ZONE_RECORD_NAME: "gpd-db"
-              TF_FAILED_DB_NAME: "pagopa-p-gpd-pgflex"
-              TF_FAILOVER_DB_NAME: "pagopa-p-neu-gps-pgflex"
-              WORKINGDIR: ${{ variables.WORKING_DIR }}
-              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
       - job: nodo_failover
         strategy:
           parallel: 1
@@ -114,10 +65,59 @@ stages:
         steps:
           - template: templates/postgres-flexible-failover/template.yaml@terraform
             parameters:
-              TF_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-              TF_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+              TF_DNS_ZONE_NAME: "d.internal.postgresql.pagopa.it"
+              TF_DNS_ZONE_RG_NAME: "pagopa-d-vnet-rg"
               TF_DNS_ZONE_RECORD_NAME: "nodo-db"
-              TF_FAILED_DB_NAME: "pagopa-p-weu-nodo-flexible-postgresql"
-              TF_FAILOVER_DB_NAME: "pagopa-p-neu-nodo-flexible-postgresql"
+              TF_FAILED_DB_NAME: "pagopa-d-weu-nodo-flexible-postgresql"
+              TF_FAILOVER_DB_NAME: "pagopa-d-neu-nodo-pgflex"
               WORKINGDIR: ${{ variables.WORKING_DIR }}
-              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameDev}}"
+
+#  - stage: PROD
+#    dependsOn: []
+#    condition: and(succeeded(), eq(${{parameters.PROD}}, true))
+#    pool:
+#      name: "${{variables.poolNameProd}}"
+#    jobs:
+#      - job: fdr_failover
+#        strategy:
+#          parallel: 1
+#        timeoutInMinutes: $[variables.TIME_OUT]
+#        steps:
+#          - template: templates/postgres-flexible-failover/template.yaml@terraform
+#            parameters:
+#              TF_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+#              TF_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+#              TF_DNS_ZONE_RECORD_NAME: "fdr-db"
+#              TF_FAILED_DB_NAME: "pagopa-p-weu-fdr-flexible-postgresql"
+#              TF_FAILOVER_DB_NAME: "pagopa-p-neu-fdr-pgflex"
+#              WORKINGDIR: ${{ variables.WORKING_DIR }}
+#              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+#      - job: gpd_failover
+#        strategy:
+#          parallel: 1
+#        timeoutInMinutes: $[variables.TIME_OUT]
+#        steps:
+#          - template: templates/postgres-flexible-failover/template.yaml@terraform
+#            parameters:
+#              TF_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+#              TF_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+#              TF_DNS_ZONE_RECORD_NAME: "gpd-db"
+#              TF_FAILED_DB_NAME: "pagopa-p-gpd-pgflex"
+#              TF_FAILOVER_DB_NAME: "pagopa-p-neu-gps-pgflex"
+#              WORKINGDIR: ${{ variables.WORKING_DIR }}
+#              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+#      - job: nodo_failover
+#        strategy:
+#          parallel: 1
+#        timeoutInMinutes: $[variables.TIME_OUT]
+#        steps:
+#          - template: templates/postgres-flexible-failover/template.yaml@terraform
+#            parameters:
+#              TF_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+#              TF_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+#              TF_DNS_ZONE_RECORD_NAME: "nodo-db"
+#              TF_FAILED_DB_NAME: "pagopa-p-weu-nodo-flexible-postgresql"
+#              TF_FAILOVER_DB_NAME: "pagopa-p-neu-nodo-flexible-postgresql"
+#              WORKINGDIR: ${{ variables.WORKING_DIR }}
+#              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
