--- a/.devops/disaster-recovery.yml
+++ b/.devops/disaster-recovery.yml
@@ -67,7 +67,7 @@ stages:
               TF_DNS_ZONE_NAME: "d.internal.postgresql.pagopa.it"
               TF_DNS_ZONE_RG_NAME: "pagopa-d-vnet-rg"
               TF_DNS_ZONE_RECORD_NAME: "nodo-db"
-              TF_FAILED_DB_NAME: "pagopa-d-weu-nodo-flexible-postgresql"
+              TF_FAILOVER_DB_RG: "pagopa-d-weu-nodo-db-rg"
               TF_FAILOVER_DB_NAME: "pagopa-d-neu-nodo-pgflex"
               WORKINGDIR: ${{ variables.WORKING_DIR }}
               TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameDev}}"
