--- a/.devops/disaster-recovery.yml
+++ b/.devops/disaster-recovery.yml
@@ -58,22 +58,21 @@ stages:
     pool:
       name: "${{variables.poolNameDev}}"
     jobs:
-      - job: nodo_failover
-        displayName: Nodo postgres flexible failover
+      - job: postgres_fdr_failover
+        displayName: FDR postgres flexible failover
         strategy:
           parallel: 1
         timeoutInMinutes: $[variables.TIME_OUT]
         steps:
           - template: templates/postgres-flexible-failover/template.yaml@terraform
             parameters:
-              TF_DNS_ZONE_NAME: "d.internal.postgresql.pagopa.it"
-              TF_DNS_ZONE_RG_NAME: "pagopa-d-vnet-rg"
-              TF_DNS_ZONE_RECORD_NAME: "nodo-db"
-              TF_FAILOVER_DB_RG: "pagopa-d-weu-nodo-db-rg"
-              TF_FAILOVER_DB_NAME: "pagopa-d-neu-nodo-replica"
+              PRIVATE_DNS_ZONE_NAME: "d.internal.postgresql.pagopa.it"
+              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-d-vnet-rg"
+              PRIVATE_DNS_ZONE_RECORD_NAME: "nodo-db"
+              FAILOVER_DB_RG: "pagopa-d-weu-nodo-db-rg"
+              FAILOVER_DB_NAME: "pagopa-d-neu-nodo-replica3"
               WORKINGDIR: ${{ variables.WORKING_DIR }}
-              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameDev}}"
-
+              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameDev}}"
 #  - stage: PROD
 #    displayName: Disaster recovery PROD
 #    dependsOn: []
@@ -89,13 +88,13 @@ stages:
 #        steps:
 #          - template: templates/postgres-flexible-failover/template.yaml@terraform
 #            parameters:
-#              TF_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-#              TF_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
-#              TF_DNS_ZONE_RECORD_NAME: "fdr-db"
-#              TF_FAILOVER_DB_RG: "pagopa-p-weu-fdr-db-rg"
-#              TF_FAILOVER_DB_NAME: "pagopa-p-neu-fdr-pgflex"
+#              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+#              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+#              PRIVATE_DNS_ZONE_RECORD_NAME: "fdr-db"
+#              FAILOVER_DB_RG: "pagopa-p-weu-fdr-db-rg"
+#              FAILOVER_DB_NAME: "pagopa-p-neu-fdr-pgflex"
 #              WORKINGDIR: ${{ variables.WORKING_DIR }}
-#              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+#              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
 #      - job: postgres_gpd_failover
 #        displayName: GPD/GPS postgres flexible failover
 #        strategy:
@@ -104,13 +103,13 @@ stages:
 #        steps:
 #          - template: templates/postgres-flexible-failover/template.yaml@terraform
 #            parameters:
-#              TF_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-#              TF_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
-#              TF_DNS_ZONE_RECORD_NAME: "gpd-db"
-#              TF_FAILOVER_DB_RG: "pagopa-p-pgres-flex-rg"
-#              TF_FAILOVER_DB_NAME: "pagopa-p-neu-gps-pgflex"
+#              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+#              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+#              PRIVATE_DNS_ZONE_RECORD_NAME: "gpd-db"
+#              FAILOVER_DB_RG: "pagopa-p-pgres-flex-rg"
+#              FAILOVER_DB_NAME: "pagopa-p-neu-gps-pgflex"
 #              WORKINGDIR: ${{ variables.WORKING_DIR }}
-#              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+#              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
 #      - job: postgres_nodo_failover
 #        displayName: Nodo postgres flexible failover
 #        strategy:
@@ -119,10 +118,10 @@ stages:
 #        steps:
 #          - template: templates/postgres-flexible-failover/template.yaml@terraform
 #            parameters:
-#              TF_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-#              TF_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
-#              TF_DNS_ZONE_RECORD_NAME: "nodo-db"
-#              TF_FAILOVER_DB_RG: "pagopa-p-weu-nodo-db-rg"
-#              TF_FAILOVER_DB_NAME: "pagopa-p-neu-nodo-flexible-postgresql"
+#              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+#              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+#              PRIVATE_DNS_ZONE_RECORD_NAME: "nodo-db"
+#              FAILOVER_DB_RG: "pagopa-p-weu-nodo-db-rg"
+#              FAILOVER_DB_NAME: "pagopa-p-neu-nodo-flexible-postgresql"
 #              WORKINGDIR: ${{ variables.WORKING_DIR }}
-#              TF_AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+#              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
